--- a/requirements.txt
+++ b/requirements.txt
@@ -3,19 +3,26 @@ anyio==4.4.0
 click==8.1.7
 colorama==0.4.6
 fastapi==0.114.1
+fastapi-cache2==0.2.2
 FastAPI-SQLAlchemy==0.2.1
 greenlet==3.1.0
 h11==0.14.0
 httptools==0.6.1
 idna==3.8
+pendulum==3.0.0
 pydantic==2.9.1
 pydantic_core==2.23.3
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 PyYAML==6.0.2
+redis==4.6.0
+six==1.16.0
 sniffio==1.3.1
 SQLAlchemy==2.0.34
 starlette==0.38.5
+time-machine==2.15.0
 typing_extensions==4.12.2
+tzdata==2024.1
 uvicorn==0.30.6
 watchfiles==0.24.0
 websockets==13.0.1
